--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==24.2.0
 channels==4.1.0
+channels-redis==4.2.0
+click==8.1.7
+colorama==0.4.6
 Django==5.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
+h11==0.14.0
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+msgpack==1.0.8
 pillow==10.4.0
 PyJWT==2.9.0
 python-dotenv==1.0.1
+PyYAML==6.0.2
+redis==5.0.8
+referencing==0.35.1
+rpds-py==0.20.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
+uritemplate==4.1.1
+uvicorn==0.30.6
