--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==4.4.0
 asgiref==3.8.1
 async-timeout==4.0.3
 attrs==24.2.0
@@ -9,7 +10,10 @@ Django==5.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+exceptiongroup==1.2.2
 h11==0.14.0
+httptools==0.6.1
+idna==3.8
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -21,8 +25,12 @@ PyYAML==6.0.2
 redis==5.0.8
 referencing==0.35.1
 rpds-py==0.20.0
+sniffio==1.3.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 uvicorn==0.30.6
+watchfiles==0.23.0
+websocat==1.13.0
+websockets==13.0
