--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 exceptiongroup==1.2.2
+Faker==28.0.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.8
@@ -20,11 +21,13 @@ jsonschema-specifications==2023.12.1
 msgpack==1.0.8
 pillow==10.4.0
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 redis==5.0.8
 referencing==0.35.1
 rpds-py==0.20.0
+six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
