refactor chat_app

--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,8 @@ pillow==10.4.0
 platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.48
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycodestyle==2.12.1
@@ -63,7 +65,6 @@ pytest-django==4.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
-redis==3.5.3
 referencing==0.35.1
 rpds-py==0.20.0
 service-identity==24.1.0
